@@ -6,11 +6,11 @@ import com.voyageone.base.dao.mongodb.model.BaseMongoMap;
 import com.voyageone.base.exception.BusinessException;
 import com.voyageone.common.util.DateTimeUtil;
 import com.voyageone.common.util.StringUtils;
+import com.voyageone.service.bean.cms.CustomPropBean;
 import com.voyageone.service.bean.cms.feed.FeedCustomPropWithValueBean;
 import com.voyageone.service.bean.cms.translation.TaskSummaryBean;
 import com.voyageone.service.bean.cms.translation.TranslationTaskBean;
 import com.voyageone.service.bean.cms.translation.TranslationTaskBean_CommonFields;
-import com.voyageone.service.bean.cms.translation.TranslationTaskBean_CustomProps;
 import com.voyageone.service.dao.cms.mongo.CmsBtFeedInfoDao;
 import com.voyageone.service.dao.cms.mongo.CmsBtProductDao;
 import com.voyageone.service.dao.cms.mongo.CmsBtProductGroupDao;
@@ -22,6 +22,7 @@ import com.voyageone.service.model.cms.mongo.product.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -81,18 +82,18 @@ public class TranslationTaskService extends BaseService {
                 "'common.fields.translator':{'$exists' : true}," +
                 "'common.fields.translator':{'$ne' : ''}," +
                 "'common.fields.translateTime':{'$gt':'%s'}}", translateTimeStr);
-        taskSummary.setImcompeleteCount(Long.valueOf(cmsBtProductDao.countByQuery(queryStr, channelId)).intValue());
+        taskSummary.setIncompleteCount(cmsBtProductDao.countByQuery(queryStr, channelId));
 
         //完成翻译总商品数
         queryStr = "{'common.fields.isMasterMain':1," +
                 "'common.fields.translateStatus':'1'}";
-        taskSummary.setCompeleteCount(Long.valueOf(cmsBtProductDao.countByQuery(queryStr, channelId)).intValue());
+        taskSummary.setCompleteCount(cmsBtProductDao.countByQuery(queryStr, channelId));
 
         //个人完成翻译商品数
         queryStr = String.format("{'common.fields.isMasterMain':1," +
                 "'common.fields.translateStatus':'1'," +
                 "'common.fields.translator':'%s'}", userName);
-        taskSummary.setUserCompeleteCount(Long.valueOf(cmsBtProductDao.countByQuery(queryStr, channelId)).intValue());
+        taskSummary.setUserCompleteCount(cmsBtProductDao.countByQuery(queryStr, channelId));
         return taskSummary;
     }
 
@@ -153,41 +154,52 @@ public class TranslationTaskService extends BaseService {
 
         CmsBtProductModel product = cmsBtProductDao.selectOneWithQuery(queryStr, channelId);
 
-        TranslationTaskBean translationTaskBean = new TranslationTaskBean();
+        if (product == null) {
+            //没有过期任务，按优先级参数分配
+            JomgoQuery queryObj = new JomgoQuery();
 
-        if (product != null) {
-            translationTaskBean = fillTranslationTaskBean(product);
-            return translationTaskBean;
-        }
+            queryObj.addQuery("'common.fields.isMasterMain':1,'common.fields.translateStatus':'0'");
 
-        JomgoQuery queryObj = new JomgoQuery();
+            if (!StringUtils.isNullOrBlank2(keyWord)) {
+                queryObj.addQuery("'$or':[ {'common.fields.code':#},{'common.fields.productNameEn':{'$regex': #}}," +
+                        "{'common.fields.originalTitleCn':{'$regex': #}}]");
+                queryObj.addParameters(keyWord, keyWord, keyWord);
+            }
 
-        queryObj.addQuery("'common.fields.isMasterMain':1,'common.fields.translateStatus':'0'");
-
-        if (!StringUtils.isNullOrBlank2(keyWord)) {
-            queryObj.addQuery("'$or':[ {'common.fields.code':#},{'common.fields.productNameEn':{'$regex': #}}," +
-                    "{'common.fields.originalTitleCn':{'$regex': #}}]");
-            queryObj.addParameters(keyWord, keyWord, keyWord);
-        }
-
-        if (!StringUtils.isNullOrBlank2(priority)) {
-            if (priority.equalsIgnoreCase("quantity")) {
-                if (sort.equalsIgnoreCase("asc")) {
-                    queryObj.setSort("{'common.fields.quantity' : 1}");
-                } else {
-                    queryObj.setSort("{'common.fields.quantity' : -1}");
+            if (!StringUtils.isNullOrBlank2(priority)) {
+                if (priority.equalsIgnoreCase("quantity")) {
+                    if (sort.equalsIgnoreCase("asc")) {
+                        queryObj.setSort("{'common.fields.quantity' : 1}");
+                    } else {
+                        queryObj.setSort("{'common.fields.quantity' : -1}");
+                    }
                 }
             }
+
+            product = cmsBtProductDao.selectOneWithQuery(queryObj, channelId);
         }
 
-        product = cmsBtProductDao.selectOneWithQuery(queryObj, channelId);
-
-        if (product != null) {
-            translationTaskBean = fillTranslationTaskBean(product);
+        if (product == null) {
+            throw new BusinessException("当前没有待领取的翻译任务！");
         }
 
-        // TODO: 2016/7/3 获取任务未进行DB内容的相应变更 如果前台未点击过保存按钮 此Task依旧标记为未分配
-        return translationTaskBean;
+        //修改任务状态
+        else {
+            Map<String, Object> rsMap = new HashMap<>();
+            Map<String, Object> queryMap = new HashMap<>();
+            queryMap.put("prodId", product.getProdId());
+            rsMap.put("common.fields.translator", userName);
+            rsMap.put("common.fields.translateTime", DateTimeUtil.getNow());
+            rsMap.put("modifier", userName);
+            rsMap.put("modified", DateTimeUtil.getNow());
+            Map<String, Object> updateMap = new HashMap<>();
+            updateMap.put("$set", rsMap);
+
+            cmsBtProductDao.update(channelId, queryMap, updateMap);
+
+            TranslationTaskBean translationTaskBean = fillTranslationTaskBean(product);
+            return translationTaskBean;
+        }
     }
 
 
@@ -251,10 +263,9 @@ public class TranslationTaskService extends BaseService {
             Set<String> custPropKeySet = feedCustomPropList.stream().map
                     (FeedCustomPropWithValueBean::getFeed_prop_original).collect(Collectors.toSet());
             //根据feedCustomPropList精简cnProps
-            List<TranslationTaskBean_CustomProps> cnProps = bean.getCustomProps();
+            List<CustomPropBean> cnProps = bean.getCustomProps();
             if (custPropKeySet != null && custPropKeySet.size() > 0) {
-                cnProps = cnProps.stream().filter(w -> custPropKeySet.contains(w.getFeedAttrEn())).collect(Collectors
-                        .toList());
+                cnProps = cnProps.stream().filter(w -> custPropKeySet.contains(w.getFeedAttrEn())).collect(Collectors.toList());
             }
 
 
@@ -282,16 +293,12 @@ public class TranslationTaskService extends BaseService {
                 rsMap.put("modified", DateTimeUtil.getNow());
 
                 if (cnProps != null) {
-                    rsMap.put("feed.customIds", cnProps.stream().map(TranslationTaskBean_CustomProps::getFeedAttrEn)
-                            .collect(Collectors.toList()));
-                    rsMap.put("feed.customIdsCn", cnProps.stream().map
-                            (TranslationTaskBean_CustomProps::getFeedAttrCn).collect(Collectors.toList()));
-                    rsMap.put("feed.orgAtts", cnProps.stream().collect(toMap
-                            (TranslationTaskBean_CustomProps::getFeedAttrEn,
-                                    TranslationTaskBean_CustomProps::getFeedAttrValueEn)));
-                    rsMap.put("feed.cnAtts", cnProps.stream().collect(toMap
-                            (TranslationTaskBean_CustomProps::getFeedAttrEn,
-                                    TranslationTaskBean_CustomProps::getFeedAttrValueCn)));
+//                    rsMap.put("feed.customIds", cnProps.stream().map(CustomPropBean::getFeedAttrEn)
+//                            .collect(Collectors.toList()));
+//                    rsMap.put("feed.customIdsCn", cnProps.stream().map
+//                            (CustomPropBean::getFeedAttrCn).collect(Collectors.toList()));
+                    rsMap.put("feed.orgAtts", cnProps.stream().collect(toMap(CustomPropBean::getFeedAttrEn, CustomPropBean::getFeedAttrValueEn)));
+                    rsMap.put("feed.cnAtts", cnProps.stream().collect(toMap(CustomPropBean::getFeedAttrEn, CustomPropBean::getFeedAttrValueCn)));
                 }
 
                 Map<String, Object> updateMap = new HashMap<>();
@@ -348,7 +355,7 @@ public class TranslationTaskService extends BaseService {
             queryObj.addParameters(translateTimeStr);
         }
 
-        queryObj.setSkip(pageSize * (pageNum - 1)).setLimit(pageNum);
+        queryObj.setSkip(pageSize * (pageNum - 1)).setLimit(pageSize);
 
         List<CmsBtProductModel> products = cmsBtProductDao.select(queryObj, channelId);
 
@@ -367,13 +374,19 @@ public class TranslationTaskService extends BaseService {
                 } else {
                     map.put("image1", "");
                 }
-                map.put("feeCategory", product.getFeed().getCatPath());
+                map.put("feedCategory", product.getFeed().getCatPath());
                 map.put("code", fields.getCode());
                 map.put("productName", StringUtils.isNullOrBlank2(fields.getOriginalTitleCn()) ? (fields
                         .getProductNameEn()) : fields.getOriginalTitleCn());
                 map.put("catPath", product.getCommon().getCatPath() == null ? "" : product.getCommon().getCatPath());
                 map.put("translator", fields.getTranslator());
-                map.put("translateTime", fields.getTranslateTime());
+                SimpleDateFormat sdf = new SimpleDateFormat(DateTimeUtil.DEFAULT_DATE_FORMAT);
+                try {
+                    Date translateTime = sdf.parse(fields.getTranslateTime());
+                    map.put("translateTime", translateTime.getTime() / 1000);
+                } catch (Exception e) {
+                    map.put("translateTime", fields.getTranslateTime());
+                }
                 list.add(map);
             }
         }
@@ -382,6 +395,9 @@ public class TranslationTaskService extends BaseService {
         return result;
     }
 
+    private String getString(String str) {
+        return StringUtils.isNullOrBlank2(str) ? "" : str;
+    }
 
     /**
      * 装填TranslationTaskBean
@@ -391,29 +407,29 @@ public class TranslationTaskService extends BaseService {
      */
     private TranslationTaskBean fillTranslationTaskBean(CmsBtProductModel product) {
 
-        TranslationTaskBean translationTaskBean = new TranslationTaskBean();
+
         if (product != null) {
-            String channelId = product.getChannelId();
+            TranslationTaskBean translationTaskBean = new TranslationTaskBean();
             //装填Bean
             translationTaskBean.setProdId(product.getProdId());
-            translationTaskBean.setFeedCategory(product.getFeed().getCatPath());
+            translationTaskBean.setFeedCategory(getString(product.getFeed().getCatPath()));
 
             CmsBtProductModel_Field fields = product.getCommon().getFields();
-            translationTaskBean.setCatPath(product.getCommon().getCatPath());
-            translationTaskBean.setProductCode(fields.getCode());
+            translationTaskBean.setCatPath(getString(product.getCommon().getCatPath()));
+            translationTaskBean.setProductCode(getString(fields.getCode()));
             TranslationTaskBean_CommonFields commonFields = new TranslationTaskBean_CommonFields();
-            commonFields.setBrand(fields.getBrand());
-            commonFields.setProductNameEn(fields.getProductNameEn());
-            commonFields.setOriginalTitleCn(fields.getOriginalTitleCn());
-            commonFields.setMaterialEn(fields.getMaterialEn());
-            commonFields.setMaterialCn(fields.getMaterialCn());
-            commonFields.setOrigin(fields.getOrigin());
-            commonFields.setShortDesEn(fields.getShortDesEn());
-            commonFields.setShortDesCn(fields.getShortDesCn());
-            commonFields.setLongDesEn(fields.getLongDesEn());
-            commonFields.setLongDesCn(fields.getLongDesCn());
-            commonFields.setUsageEn(fields.getUsageEn());
-            commonFields.setUsageCn(fields.getUsageCn());
+            commonFields.setBrand(getString(fields.getBrand()));
+            commonFields.setProductNameEn(getString(fields.getProductNameEn()));
+            commonFields.setOriginalTitleCn(getString(fields.getOriginalTitleCn()));
+            commonFields.setMaterialEn(getString(fields.getMaterialEn()));
+            commonFields.setMaterialCn(getString(fields.getMaterialCn()));
+            commonFields.setOrigin(getString(fields.getOrigin()));
+            commonFields.setShortDesEn(getString(fields.getShortDesEn()));
+            commonFields.setShortDesCn(getString(fields.getShortDesCn()));
+            commonFields.setLongDesEn(getString(fields.getLongDesEn()));
+            commonFields.setLongDesCn(getString(fields.getLongDesCn()));
+            commonFields.setUsageEn(getString(fields.getUsageEn()));
+            commonFields.setUsageCn(getString(fields.getUsageCn()));
             List<CmsBtProductModel_Field_Image> img1 = fields.getImages1();
             if (img1 != null && img1.size() > 0) {
                 commonFields.setImages1(img1);
@@ -421,128 +437,139 @@ public class TranslationTaskService extends BaseService {
 
             List<CmsBtProductModel_Field_Image> img2 = fields.getImages1();
             if (img2 != null && img2.size() > 0) {
-                commonFields.setImages1(img1);
+                commonFields.setImages3(img1);
             }
 
             List<CmsBtProductModel_Field_Image> img3 = fields.getImages1();
             if (img3 != null && img3.size() > 0) {
-                commonFields.setImages1(img3);
+                commonFields.setImages3(img3);
             }
 
 
             List<CmsBtProductModel_Field_Image> img4 = fields.getImages1();
             if (img4 != null && img4.size() > 0) {
-                commonFields.setImages1(img4);
+                commonFields.setImages4(img4);
             }
 
             List<CmsBtProductModel_Field_Image> img5 = fields.getImages1();
             if (img5 != null && img5.size() > 0) {
-                commonFields.setImages1(img5);
+                commonFields.setImages5(img5);
             }
 
             List<CmsBtProductModel_Field_Image> img6 = fields.getImages1();
             if (img6 != null && img6.size() > 0) {
-                commonFields.setImages1(img6);
+                commonFields.setImages6(img6);
             }
 
             List<CmsBtProductModel_Field_Image> img7 = fields.getImages1();
             if (img7 != null && img7.size() > 0) {
-                commonFields.setImages1(img7);
+                commonFields.setImages7(img7);
             }
 
             List<CmsBtProductModel_Field_Image> img8 = fields.getImages1();
             if (img8 != null && img8.size() > 0) {
-                commonFields.setImages1(img8);
+                commonFields.setImages8(img8);
             }
 
-            commonFields.setClientProductUrl(fields.getClientProductUrl());
-            commonFields.setTranslator(fields.getTranslator());
-            commonFields.setTranslateStatus(fields.getTranslateStatus());
-            commonFields.setTranslateTime(fields.getTranslateTime());
+            commonFields.setClientProductUrl(getString(fields.getClientProductUrl()));
+            commonFields.setTranslator(getString(fields.getTranslator()));
+            commonFields.setTranslateStatus(getString(fields.getTranslateStatus()));
+            commonFields.setTranslateTime(getString(fields.getTranslateTime()));
             translationTaskBean.setCommonFields(commonFields);
 
-            CmsBtProductModel_Feed productFeed = product.getFeed();
-            BaseMongoMap<String, Object> cnAttrs = productFeed.getCnAtts();
+            List<CustomPropBean> props = getCustomProp(product);
+            translationTaskBean.setCustomProps(props);
+        }
+        return null;
+    }
 
 
-            List<TranslationTaskBean_CustomProps> props = new ArrayList<>();
+    /**
+     * 获取CustomProp
+     *
+     * @param product
+     * @return
+     */
+    public List<CustomPropBean> getCustomProp(CmsBtProductModel product) {
 
-            //读feed_info
-            CmsBtFeedInfoModel feedInfo = cmsBtFeedInfoDao.selectProductByCode(channelId, fields.getCode());
-            Map<String, List<String>> feedAttr = feedInfo.getAttribute();
+        String channelId = product.getChannelId();
+        CmsBtProductModel_Field fields = product.getCommon().getFields();
 
-            //读cms_mt_feed_custom_prop
-            List<FeedCustomPropWithValueBean> feedCustomPropList = customPropService.getPropList(channelId, feedInfo
-                    .getCategory());
+        CmsBtProductModel_Feed productFeed = product.getFeed();
+        BaseMongoMap<String, Object> cnAttrs = productFeed.getCnAtts();
 
-            //去除掉feedCustomPropList中的垃圾数据
-            if (feedCustomPropList != null && feedCustomPropList.size() > 0) {
-                feedCustomPropList = feedCustomPropList.stream().filter(w -> (!StringUtils.isNullOrBlank2(w
-                        .getFeed_prop_translation()) &&
-                        !StringUtils.isNullOrBlank2(w.getFeed_prop_original()))).collect(Collectors.toList());
-            } else {
-                feedCustomPropList = new ArrayList<>();
+        List<CustomPropBean> props = new ArrayList<>();
+
+        //读feed_info
+        CmsBtFeedInfoModel feedInfo = cmsBtFeedInfoDao.selectProductByCode(channelId, fields.getCode());
+        Map<String, List<String>> feedAttr = feedInfo.getAttribute();
+
+        //读cms_mt_feed_custom_prop
+        List<FeedCustomPropWithValueBean> feedCustomPropList = customPropService.getPropList(channelId, feedInfo.getCategory());
+
+        //去除掉feedCustomPropList中的垃圾数据
+        if (feedCustomPropList != null && feedCustomPropList.size() > 0) {
+            feedCustomPropList = feedCustomPropList.stream().filter(w -> (!StringUtils.isNullOrBlank2(w.getFeed_prop_translation()) &&
+                    !StringUtils.isNullOrBlank2(w.getFeed_prop_original()))).collect(Collectors.toList());
+        } else {
+            feedCustomPropList = new ArrayList<>();
+        }
+
+        //合并feedAttr和feedCustomPropList
+        for (String attrKey : feedAttr.keySet()) {
+            List<String> valueList = feedAttr.get(attrKey);
+            CustomPropBean prop = new CustomPropBean();
+            prop.setFeedAttrEn(attrKey);
+            String attrValue = Joiner.on(",").skipNulls().join(valueList);
+            prop.setFeedAttrValueEn(attrValue);
+            prop.setFeedAttrCn("");
+            prop.setFeedAttrValueCn("");
+            prop.setFeedAttr(true);
+
+            if (feedCustomPropList.stream().filter(w -> w.getFeed_prop_original().equals(attrKey)).count() > 0) {
+                FeedCustomPropWithValueBean feedCustProp = feedCustomPropList.stream().filter(w -> w.getFeed_prop_original().equals(attrKey)).findFirst().get();
+                prop.setFeedAttrCn(feedCustProp.getFeed_prop_translation());
+                if (cnAttrs.keySet().stream().filter(w -> w.equals(attrKey)).count() > 0) {
+                    //如果product已经保存过
+                    String cnAttKey = cnAttrs.keySet().stream().filter(w -> w.equals(attrKey)).findFirst().get();
+                    prop.setFeedAttrValueCn(cnAttrs.getStringAttribute(cnAttKey));
+                } else {
+                    //取默认值
+                    Map<String, List<String>> defaultValueMap = feedCustProp.getMapPropValue();
+                    List<String> vList = defaultValueMap.get(attrValue);
+                    if (vList != null) {
+                        if (vList.stream().filter(w -> !StringUtils.isNullOrBlank2(w)).count() > 0) {
+                            String cnAttValue = vList.stream().filter(w -> !StringUtils.isNullOrBlank2(w)).findFirst().get();
+                            prop.setFeedAttrValueCn(cnAttValue);
+                        }
+                    }
+
+                }
             }
 
-            //合并feedAttr和feedCustomPropList
-            for (String attrKey : feedAttr.keySet()) {
-                List<String> valueList = feedAttr.get(attrKey);
-                TranslationTaskBean_CustomProps prop = new TranslationTaskBean_CustomProps();
-                prop.setFeedAttrEn(attrKey);
-                String attrValue = Joiner.on(",").skipNulls().join(valueList);
-                prop.setFeedAttrValueEn(attrValue);
-                prop.setFeedAttrCn("");
+            props.add(prop);
+        }
+
+        //仅存在于cms_mt_feed_custom_prop中，不存在于feed attributes中的项目
+        for (FeedCustomPropWithValueBean custProp : feedCustomPropList) {
+            String feedKey = custProp.getFeed_prop_original();
+            if (feedAttr.keySet().stream().filter(w -> w.equals(feedKey)).count() == 0) {
+                CustomPropBean prop = new CustomPropBean();
+                prop.setFeedAttrEn(feedKey);
+                prop.setFeedAttrValueEn("");
+                prop.setFeedAttrCn(custProp.getFeed_prop_translation());
                 prop.setFeedAttrValueCn("");
-                prop.setFeedAttr(true);
+                prop.setFeedAttr(false);
 
-                if (feedCustomPropList.stream().filter(w -> w.getFeed_prop_original().equals(attrKey)).count() > 0) {
-                    FeedCustomPropWithValueBean feedCustProp = feedCustomPropList.stream().filter(w -> w
-                            .getFeed_prop_original().equals(attrKey)).findFirst().get();
-                    prop.setFeedAttrCn(feedCustProp.getFeed_prop_translation());
-                    if (cnAttrs.keySet().stream().filter(w -> w.equals(attrKey)).count() > 0) {
-                        //如果product已经保存过
-                        String cnAttKey = cnAttrs.keySet().stream().filter(w -> w.equals(attrKey)).findFirst().get();
-                        prop.setFeedAttrValueCn(cnAttrs.getStringAttribute(cnAttKey));
-                    } else {
-                        //取默认值
-                        Map<String, List<String>> defaultValueMap = feedCustProp.getMapPropValue();
-                        List<String> vList = defaultValueMap.get(attrValue);
-                        if (vList != null) {
-                            if (vList.stream().filter(w -> !StringUtils.isNullOrBlank2(w)).count() > 0) {
-                                String cnAttValue = vList.stream().filter(w -> !StringUtils.isNullOrBlank2(w))
-                                        .findFirst().get();
-                                prop.setFeedAttrValueCn(cnAttValue);
-                            }
-                        }
-
-                    }
+                if (cnAttrs.keySet().stream().filter(w -> w.equals(feedAttr)).count() > 0) {
+                    String cnAttKey = cnAttrs.keySet().stream().filter(w -> w.equals(feedAttr)).findFirst().get();
+                    prop.setFeedAttrValueCn(cnAttrs.getStringAttribute(cnAttKey));
                 }
-
                 props.add(prop);
             }
 
-            //仅存在于cms_mt_feed_custom_prop中，不存在于feed attributes中的项目
-            for (FeedCustomPropWithValueBean custProp : feedCustomPropList) {
-                String feedKey = custProp.getFeed_prop_original();
-                if (feedAttr.keySet().stream().filter(w -> w.equals(feedKey)).count() == 0) {
-                    TranslationTaskBean_CustomProps prop = new TranslationTaskBean_CustomProps();
-                    prop.setFeedAttrEn(feedKey);
-                    prop.setFeedAttrValueEn("");
-                    prop.setFeedAttrCn(custProp.getFeed_prop_translation());
-                    prop.setFeedAttrValueCn("");
-                    prop.setFeedAttr(false);
-
-                    if (cnAttrs.keySet().stream().filter(w -> w.equals(feedAttr)).count() > 0) {
-                        String cnAttKey = cnAttrs.keySet().stream().filter(w -> w.equals(feedAttr)).findFirst().get();
-                        prop.setFeedAttrValueCn(cnAttrs.getStringAttribute(cnAttKey));
-                    }
-                    props.add(prop);
-                }
-
-            }
-            translationTaskBean.setCustomProps(props);
         }
-        return translationTaskBean;
+        return props;
     }
 
 }
